# cugo_ros2_control2

./: CMakeLists.txt  LICENSE  README.md  package.xml
include/cugo_ros2_control2/: COBS.h  COBS.h.ignore  cugo.hpp  cugo_ros2_control2.hpp  node.hpp  serial.hpp
launch/: cugov3i_launch.py  cugov4_launch.py
src/: cugo.cpp  cugo_ros2_control2.cpp  main.cpp  node.cpp  serial.cpp
test/: test_cugo.cpp  test_node.cpp  test_serial.cpp
urdf/: my_cugo_robot.urdf.xacro
urdf/parts/: cugo_base.urdf.xacro  mid360.urdf.xacro
